--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -18,6 +18,7 @@ create claims, edit and resolve claims, email techs any questions about claims
 <div class="dropdown">
   <p id="menu" > Menu</p>
   <ul id="menu-box" style="display: none" class="dropdown-menu">
+    <% if (locals.customers) { %> 
     <li><label for="menu2-toggle">Customer</label>
       <input type="checkbox" id="menu2-toggle"/>
       <ul id="menu2">
@@ -25,13 +26,25 @@ create claims, edit and resolve claims, email techs any questions about claims
         <li><a href="#">Ben</a></li>
       </ul>
     </li>
-    <li><label for="menu-toggle">Customer</label>
-      <input type="checkbox" id="menu-toggle"/>
-      <ul id="menu">
-        <li><a href="#">Nancy</a></li>
+    <%}%>
+    <% if (locals.employees) { %> 
+    <li><label for="menu2-toggle">Customer</label>
+      <input type="checkbox" id="menu2-toggle"/>
+      <ul id="menu2">
+        <li><a href="#" onclick="addFilter()">Nancy</a></li>
         <li><a href="#">Ben</a></li>
       </ul>
     </li>
+    <%}%>
+    <% if (locals.products) { %> 
+    <li><label for="menu2-toggle">Customer</label>
+      <input type="checkbox" id="menu2-toggle"/>
+      <ul id="menu2">
+        <li><a href="#" onclick="addFilter()">Nancy</a></li>
+        <li><a href="#">Ben</a></li>
+      </ul>
+    </li>
+    <%}%>
   </ul>
 </div>
 
