--- a/static/style.css
+++ b/static/style.css
@@ -64,8 +64,8 @@ label {
   display: none;
 }
 #menu3, #menu2, #menu {
-  width: 780px;
-  overflow: hidden;
+  width: 200px;
+  overflow: auto ;
   max-height: 0;
   padding: 0;
   margin: 0 auto;
