--- a/static/style.css
+++ b/static/style.css
@@ -59,6 +59,9 @@ label {
   cursor: pointer;
 }
 
+li{
+  padding-left: 10px;
+}
 
 #menu3-toggle,#menu2-toggle,#menu-toggle {
   display: none;
@@ -67,7 +70,7 @@ label {
   width: 200px;
   overflow: auto ;
   max-height: 0;
-  padding: 0;
+  padding-left: 10px;
   margin: 0 auto;
   -webkit-transition: all 0.3s ease;
 }
